# Crab

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  build.rs  style.md  test_positions.epd
.cargo/: config.toml
.github/workflows/: openbench.yml
crab/src/: main.rs  util.rs
pseudocode/: stage_1
src/: TODO  bench.rs  bitboard.rs  bits.rs  board.rs  defs.rs  engine.rs  error.rs  evaluation.rs  fen_generation.rs  game_parser.rs  lib.rs  lookups.rs  main.rs  movegen.rs  movelist.rs  perft.rs  search.rs  transposition_table.rs  tune.rs  uci.rs  util.rs
src/bits/: util.rs
src/board/: accumulators.rs  bits.rs  movegen.rs  zobrist.rs
src/board/movegen/: magic.rs  util.rs
src/engine/: evaluate.rs  find_magics.rs  perft.rs  search.rs  uci.rs
src/engine/search/: alpha_beta.rs  ordering.rs
src/evaluation/: piece_square_tables.rs  values.rs
src/lookups/: magic.rs  util.rs
src/movegen/: magic.rs  util.rs
src/search/: alpha_beta.rs  alpha_beta_search.rs  aspiration.rs  depth.rs  history.rs  iterative_deepening.rs  main_search.rs  movepick.rs  ordering.rs  time.rs
