[package]
name = "crab"
version = "0.1.0"
edition = "2021"
default-run = "gui"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "cmdline"
path = "src/bin/cmdline.rs"

[[bin]]
name = "gui"
path = "src/bin/gui/gui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
oorandom = "11.1.3"

[dependencies.eframe]
version = "0.25.0"
default-features = false
features = ["default_fonts", "glow", "x11"]

[dependencies.egui_extras]
version = "0.25.0"
default-features = false
features = ["file", "image"]

[dependencies.image]
version = "0.24.8"
default-features = false
features = ["png"]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[profile.test]
# needed to pass the perft tests in a reasonable time
opt-level = 1
