[package]
name = "crab"
version = "4.6.1"
edition = "2021"

[features]
sample = ["dep:pgn-reader"]
tune = []

[lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
absolute_paths = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
disallowed_script_idents = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
infinite_loop = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_docs_in_private_items = "deny"
missing_inline_in_public_items = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pattern_type_mismatch = "deny"
print_stderr = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
semicolon_outside_block = "deny"
string_add = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
wildcard_enum_match_arm = "deny"
# There are so many casts in chess engines that I just got tired of `allow`ing
# them
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"

[lints.rust]
# If I'm in the process of developing a feature, I would prefer to add the
# documentation at the end, so warn instead of denying
missing_docs = "warn"
future-incompatible = "deny"
let-underscore = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
private_doc_tests = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[dependencies]
oorandom = "11.1.3"
pgn-reader = { version = "0.26.0", optional = true }
arrayvec = "0.7.4"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
